Still working on URL jump issue

--- a/css/components/toolbar.css
+++ b/css/components/toolbar.css
@@ -124,6 +124,10 @@
   }
 }
 
+#timelineMinimap {
+  height: calc(var(--vh, 1vh) * 100);
+}
+
 #timelineMinimap.open {
   transform: translateX(0);
 }
